--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -108,6 +108,19 @@
                         </a>
                     </li>
                 </ul>
+                <!-- Expert Mode Toggle - Right side of navbar -->
+                <div class="ms-auto">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" 
+                               type="checkbox" 
+                               id="globalExpertModeToggle" 
+                               x-model="expertMode">
+                        <label class="form-check-label text-light" for="globalExpertModeToggle">
+                            <i class="fas fa-flask me-1" title="Expert Mode"></i>
+                            <span class="d-none d-md-inline">Expert Mode</span>
+                        </label>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -194,19 +207,10 @@
                         <div class="row mb-4">
                             <div class="col">
                                 <div class="card">
-                                    <div class="card-header d-flex justify-content-between align-items-center">
+                                    <div class="card-header">
                                         <h5 class="card-title mb-0">
                                             <i class="fas fa-cogs me-2"></i>System Services
                                         </h5>
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" 
-                                                   type="checkbox" 
-                                                   id="expertModeToggle" 
-                                                   x-model="expertMode">
-                                            <label class="form-check-label" for="expertModeToggle">
-                                                Expert Mode
-                                            </label>
-                                        </div>
                                     </div>
 
                                         <!-- Loading state -->
@@ -989,16 +993,6 @@
                                     <span class="d-none d-md-inline">View Logs</span>
                                     <span class="d-md-none">Logs</span>
                                 </button>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" 
-                                           type="checkbox" 
-                                           x-model="expertMode" 
-                                           id="expertMode">
-                                    <label class="form-check-label" for="expertMode">
-                                        <i class="fas fa-flask" title="Expert Mode"></i>
-                                        Expert Mode
-                                    </label>
-                                </div>
                             </div>
                         </div>
                         <div class="card-body">
@@ -1639,16 +1633,6 @@
                                             <span class="d-none d-md-inline">View Logs</span>
                                             <span class="d-md-none">Logs</span>
                                         </button>
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" 
-                                                   type="checkbox" 
-                                                   x-model="expertMode" 
-                                                   id="expertModeSoundscape">
-                                            <label class="form-check-label" for="expertModeSoundscape">
-                                                <i class="fas fa-flask" title="Expert Mode"></i>
-                                                Expert Mode
-                                            </label>
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="card-body">
@@ -1705,7 +1689,7 @@
                                             </div>
                                             
                                             <!-- Technical Settings Row (Expert Mode) -->
-                                            <div class="row" x-show="expertMode" x-transition>
+                                            <div class="row" x-show="$parent.expertMode" x-transition>
                                                 <div class="col-md-6">
                                                     <div class="mb-3">
                                                         <label class="form-label">Device Name <small class="text-muted">(Expert)</small></label>
@@ -1730,7 +1714,7 @@
                                             </div>
                                             
                                             <!-- Additional Technical Settings Row (Expert Mode) -->
-                                            <div class="row" x-show="expertMode" x-transition>
+                                            <div class="row" x-show="$parent.expertMode" x-transition>
                                                 <div class="col-md-6">
                                                     <div class="mb-3">
                                                         <label class="form-label">Input Length <small class="text-muted">(Expert)</small></label>
@@ -1895,7 +1879,7 @@
                                             </div>
                                             
                                             <!-- Expert Mode: Advanced Detector Settings -->
-                                            <div x-show="expertMode" x-transition>
+                                            <div x-show="$parent.expertMode" x-transition>
                                             </div>
                                         </div>
 
@@ -1995,7 +1979,7 @@
                                         </div>
 
                                         <!-- Species Groups Section (Expert Mode) -->
-                                        <div class="mb-4" x-show="expertMode" x-transition>
+                                        <div class="mb-4" x-show="$parent.expertMode" x-transition>
                                             <h6 class="border-bottom pb-2">
                                                 <i class="fas fa-layer-group text-muted me-2"></i>
                                                 Species Groups
@@ -2016,7 +2000,7 @@
 
                                         <!-- Optional Arguments Section (Expert Mode) -->
                                                                                 <!-- Output Device Settings (Expert Mode) -->
-                                        <div class="mb-4" x-show="expertMode" x-transition>
+                                        <div class="mb-4" x-show="$parent.expertMode" x-transition>
                                             <h6 class="border-bottom pb-2">
                                                 <i class="fas fa-volume-up me-2"></i>
                                                 Output Device
@@ -2049,7 +2033,7 @@
                                             </div>
                                             
                                             <!-- Expert Mode Output Settings -->
-                                            <div class="row" x-show="expertMode" x-transition>
+                                            <div class="row" x-show="$parent.expertMode" x-transition>
                                                 <div class="col-md-4">
                                                     <div class="mb-3">
                                                         <label class="form-label">Device Match <small class="text-muted">(Expert)</small></label>
@@ -2085,7 +2069,7 @@
                                         </div>
 
                                         <!-- Lure Playback Section (Expert Mode) -->
-                                        <div class="mb-4" x-show="expertMode" x-transition>
+                                        <div class="mb-4" x-show="$parent.expertMode" x-transition>
                                             <h6 class="border-bottom pb-2">
                                                 <i class="fas fa-play text-muted me-2"></i>
                                                 Lure Playback
@@ -2107,7 +2091,7 @@
                                                 </template>
                                             </div>
                                         </div>
-                                        <div class="mb-4" x-show="expertMode" x-transition>
+                                        <div class="mb-4" x-show="$parent.expertMode" x-transition>
                                             <h6 class="border-bottom pb-2">
                                                 <i class="fas fa-cogs text-muted me-2"></i>
                                                 Optional Arguments
@@ -3293,7 +3277,6 @@
                     groups: {}
                 },
                 configLoaded: false,
-                expertMode: false,
                 serviceStatus: {
                     active: false,
                     enabled: false,
@@ -3777,7 +3760,6 @@
                 actionLoading: false,
                 actionMessage: '',
                 actionError: false,
-                expertMode: false,
                 // Reboot functionality
                 rebootLoading: false,
 
@@ -3905,7 +3887,7 @@
                 },
 
                 get filteredServices() {
-                    if (this.expertMode) {
+                    if (this.$parent.expertMode) {
                         return this.services;
                     } else {
                         return this.services.filter(service => !service.expert);
